# fty-common-translation

./: .dependencies-graph.dot.part  .gitignore  .travis.yml  CMakeLists.txt  Jenkinsfile  Makefile.am  README.md  ci_build.sh  ci_dependencies.sh  ci_deploy.sh  ci_deploy_obs.sh  collect_translations.sh  configure.ac  project.xml  translations_to_weblate.awk  translations_to_weblate.sh
builds/check_zproject/: ci_build.sh
builds/cmake/: ci_build.sh
doc/: .gitignore  Makefile.am  asciidoc.conf  fty-common-translation.adoc
include/: Makefile.am  fty_common_translation.h  fty_common_translation_base.h  fty_common_translation_library.h
packaging/debian/: changelog  control  copyright  fty-common-translation.dsc.obs  fty-common-translation.install  libfty-common-translation-dev.install  libfty-common-translation1.install  rules
packaging/redhat/: fty-common-translation.spec
src/: .gitignore  Makemodule.am  fty_common_translation_base.cc  fty_common_translation_classes.h  fty_common_translation_private_selftest.cc  fty_common_translation_selftest.cc  libfty_common_translation.pc.in
src/selftest-ro/: test_cs_CZ.json  test_en_US.json
test/: fty_common_translation_base.cc
test/data/: test_corrupted_en_US.json  test_en_US.json
